--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,10 +24,10 @@
                         <i class="bi bi-person-circle me-2 fs-5"></i>{{ current_user.name }}
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="{{ url_for('main.dashboard') }}"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('main.upload') }}"><i class="bi bi-upload me-2"></i>Upload</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.dashboard') }}"><i class="bi bi-clipboard-data me-2"></i>Dashboard</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.upload') }}"><i class="bi bi-collection me-2"></i>Mes images</a></li>
                         {% if current_user.is_admin %}
-                            <li><a class="dropdown-item" href="{{ url_for('main.user_upload') }}"><i class="bi bi-camera-video me-2"></i>Capture upload</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('main.admin_dashboard') }}"><i class="bi bi-lock me-2"></i>Administration</a></li>
                         {% endif %}
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item text-danger" href="{{ url_for('main.logout') }}"><i class="bi bi-box-arrow-right me-2"></i>Déconnexion</a></li>
