--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -5,6 +5,7 @@
 <h2>Statistiques de tri</h2>
 
 <form method="GET" class="row g-3 mb-4">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   <div class="col-md-4">
     <label for="start_date" class="form-label">Date de début</label>
     <input type="date" id="start_date" name="start_date" class="form-control" value="{{ request.args.get('start_date', '') }}">
