--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -16,6 +16,7 @@
 
 <!-- Upload form -->
 <form method="POST" enctype="multipart/form-data" action="{{ url_for('main.upload') }}" class="mb-3">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   <div class="mb-3">
     <label for="imageInput" class="form-label" id="uploadLabel">Choisir une image</label>
     <input type="file" name="image" class="form-control" id="imageInput" required>
