--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,8 @@
           href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin=""/>
+    <meta name="csrf_token" content="{{ csrf_token() }}">
+
 </head>
 <body class="container mt-4">
 
