--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -12,6 +12,11 @@
 
     <input type="radio" class="btn-check" name="uploadMode" id="videoMode" value="video" autocomplete="off" onchange="setUploadMode()">
     <label class="btn btn-outline-primary" for="videoMode">Vidéo</label>
+
+    <a href="{{ url_for('main.user_upload') }}" class="btn btn-outline-primary">
+        <i class="bi bi-camera-video me-1"></i>
+        Prendre une photo
+    </a>
 </div>
 
 <!-- Upload form -->
@@ -50,7 +55,7 @@ function setUploadMode() {
 {% else %}
 <a href="{{ url_for('main.user_upload') }}" class="btn btn-success mb-4">
         <i class="bi bi-camera-video me-1"></i> Prendre une photo
-    </a>
+</a>
 {% endif %}
 
 {% if images %}
